# rustbot

./: .gitignore  .mcp.json  CHANGELOG.md  Cargo.toml  Claude.md  DEVELOPMENT.md  DIAGRAM_CREATION_SUMMARY.md  DOCUMENTATION_TRIAGE_REPORT.md  FILES_CHANGED.txt  MCP_QUICKSTART.md  MERMAID_EXAMPLES.md  Makefile  PHASE1_RESOLUTION_SUMMARY.md  PHASE2_SUMMARY.md  QUICK_START_REFACTORING.md  README.md  REFACTORING_PROTOTYPE_SUMMARY.md  RUST_SETUP_COMPLETE.md  VERIFICATION_CHECKLIST.md  VERSION_MANAGEMENT.md  analyze_logs.sh  benchmark_icon.rs  build.rs  mcp_config.json  run.sh  test_marketplace_fix.sh  test_tool_calling_debug.sh  test_tool_registration.sh  test_web_search.sh
.cargo/: config.toml
.claude/: config.local.json
.claude-mpm/: config.json  mcp_auto_config_preference.json
.claude-mpm/config/: project.json
.claude-mpm/memories/: engineer_memories.md  research_memories.md
.claude/agents/: .dependency_cache  .mpm_deployment_state
.kuzu-memory-backups/: CLAUDE.md.backup_20251112_203142
agents/: README.md
agents/custom/: .gitignore
agents/presets/: assistant.json  web_search.json
agents/schema/: agent.schema.json
assets/: README.md  rustbot.icns
docs/: 1PASSWORD_INTEGRATION.md  AGENT_ARCHITECTURE_IMPROVEMENTS.md  AGENT_EVENT_ARCHITECTURE.md  AGENT_REGISTRY_SUMMARY.md  API.md  API_ARCHITECTURE.md  ARCHITECTURE_INDEX.md  ARCHITECTURE_RESEARCH_SUMMARY.md  CLEANUP_DECISIONS.md  CLEANUP_PLAN.md  CLEANUP_SUMMARY.md  DOCUMENTATION_ORGANIZATION_REPORT.md  DOCUMENTATION_REVIEW.md  INDEX.md  MAINTENANCE.md  MERMAID_FINAL_SOLUTION.md  MERMAID_IMPLEMENTATION.md  MERMAID_QUICK_REFERENCE.md  MERMAID_REGRESSION_LOG.md  MERMAID_TESTING.md  MERMAID_USAGE.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PHASE2_DOCUMENTATION_CHECKLIST.md  PROTOCOL_RESEARCH_FINDINGS.md  PROTOTYPE_REFACTORING.md  PROTOTYPE_TEST_RESULTS.md  QA_CHECKLIST.md  QA_VALIDATION_REPORT.md  QUICK_START.md  README.md  REFACTORING.md  REFACTORING_CHECKLIST.md  RUSTBOT_REFACTORING_PLAN.md  RUST_ARCHITECTURE_BEST_PRACTICES.md  TESTING_METHODS.md  TOOL_REGISTRATION_DESIGN.md  mcp_tool_integration.md
docs/PRD/: development-plan.md
docs/architecture/: QUICK_REFERENCE.md  README.md
docs/archive/: BUGFIXES.md  COMPILE_TIME_ICON.md  PERSISTENCE.md  TESTING.md
docs/design/: AGENT_DELEGATION_DESIGN.md  ARCHITECTURE.md  CONTEXT_MANAGEMENT_DESIGN.md  EVENT_VISUALIZATION_DESIGN.md  MCP_PLUGIN_ARCHITECTURE.md
docs/diagrams/: ARCHITECTURE_DIAGRAMS.md  DATA_FLOW.md  README.md  REFACTORING_TIMELINE.md
docs/fixes/: 2025-11-16-marketplace-pagination-fix.md  MARKETPLACE_FIX_SUMMARY.md  MERMAID_FIX_SUMMARY.md  mermaid-copy-feature.md  mermaid-transparent-background.md
docs/guides/: EXTENSION_INSTALLATION_GUIDE.md  MCP_QUICKSTART.md  QUICK_START.md  QUICK_START_REFACTORING.md  README.md
docs/progress/: 2025-01-17-COMPLETE_SESSION_SUMMARY.md  2025-01-17-architecture-refactoring-session.md  2025-01-17-architecture-research.md  2025-11-12-session-2.md  (+43 more)
examples/: SECRET_FORMATS_REFERENCE.md  after_refactoring.rs  agent-with-1password.json  api_demo.rs  app_builder_usage.rs  before_refactoring.rs  mcp-with-1password.json  mcp_auto_registration_demo.rs  mcp_demo.rs  mockall_testing.rs  test_agent_config_loading.rs  test_gui_api.rs  test_tool_calling.rs
kuzu-memories/: memories.db
scripts/: cleanup_project.sh  dev.sh  generate_icon.sh  manage_version.py
src/: agent.rs  api.rs  app_builder.rs  error.rs  events.rs  lib.rs  llm.rs  main.rs  mermaid.rs  tool_executor.rs  version.rs
tests/: api_tests.rs  debug_mermaid_png.rs  e2e_mermaid_labels_test.sh  e2e_mermaid_test.sh  extension_installation_test.rs  integration_mermaid_test.rs  mcp_auto_registration_test.rs  mcp_integration.rs  mcp_integration_test.rs  news_query_test.rs  tool_calling_test.rs
(+78 files in other folders)
