[package]
name = "rustbot"
version = "0.2.0"
edition = "2021"

[lib]
name = "rustbot"
path = "src/lib.rs"

[[bin]]
name = "rustbot"
path = "src/main.rs"

[package.metadata.bundle]
name = "Rustbot"
identifier = "com.rustbot.app"
icon = ["assets/rustbot.icns"]
category = "DeveloperTool"
short_description = "AI Assistant powered by Claude"
long_description = "Rustbot is an AI assistant application built with Rust and egui, featuring multi-agent architecture and real-time streaming responses."

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.29"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
futures = "0.3"
async-trait = "0.1"
chrono = "0.4"
egui-phosphor = "0.10"
image = "0.25"

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
image = "0.25"

[features]
# Optional feature to enable runtime icon processing (for debugging)
runtime-icon-processing = []
