[package]
name = "rustbot"
version = "0.2.6"
edition = "2021"

[lib]
name = "rustbot"
path = "src/lib.rs"

[[bin]]
name = "rustbot"
path = "src/main.rs"

[package.metadata.bundle]
name = "Rustbot"
identifier = "com.rustbot.app"
icon = ["assets/rustbot.icns"]
category = "DeveloperTool"
short_description = "AI Assistant powered by Claude"
long_description = "Rustbot is an AI assistant application built with Rust and egui, featuring multi-agent architecture and real-time streaming responses."

[dependencies]
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
egui = "0.32"
eframe = { version = "0.32", default-features = false, features = ["default_fonts", "glow"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
egui-phosphor = "0.10"
image = "0.25"
egui_graphs = "0.28"
egui_commonmark = { version = "0.21", features = ["embedded_image"] }
egui_extras = { version = "0.32", features = ["svg"] }
base64 = "0.22"
regex = "1.10"
resvg = "0.44"
usvg = "0.44"
tiny-skia = "0.11.4"

# MCP (Model Context Protocol) support - Phase 1: Foundation
# Note: rmcp crate not used yet, will integrate in Phase 2 for stdio transport

[dev-dependencies]
tempfile = "3.8"
mockall = "0.13"

[build-dependencies]
image = "0.25"

[features]
# Optional feature to enable runtime icon processing (for debugging)
runtime-icon-processing = []
